add css style dlem

--- a/DLEM.html
+++ b/DLEM.html
@@ -26,6 +26,10 @@
 <head>
 <meta charset="utf-8" />
 <title>DLEM</title>
+<link rel="stylesheet" href="/DLEM/assets/css/style.css?v=55d8f571868c0520420e1c0f768def04927182d6">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/DLEM/assets/js/script.js"></script>
+
 <script src="jquery-3.1.1.min.js"></script>
 <script src="progressbar.min.js"></script>
 </head>
