--- a/DLEM.html
+++ b/DLEM.html
@@ -133,13 +133,14 @@ function addDataField(){
         arrayDataInputs.push(nameDivDataInput);
     }
     var initDiv='<p id="dataInput-'+nameDivDataInput+'">';
-    var labelLang='<label for="nameLang-'+nameDivDataInput+'">Introduce el nombre del lenguaje: </label>';
-    var inputLang='<input type="text" name="nameLang-'+nameDivDataInput+'" id ="nameLang-'+nameDivDataInput+'" style="width:100px;margin-right:10px" value="">';
+    var buttonDelete='<button onclick="deleteDataField('+nameDivDataInput+');" id="buttonDelete-'+nameDivDataInput+'" value="">borra estos datos</button>';
+    var labelLang='<br><label for="nameLang-'+nameDivDataInput+'">Introduce el nombre del lenguaje: </label>';
+    var inputLang='<input type="text" name="nameLang-'+nameDivDataInput+'" id ="nameLang-'+nameDivDataInput+'" style="width:100px;margin-left:30px" value="">';
     var labelNumber='<br><label for="numberSong-'+nameDivDataInput+'">Introduce el número de canciones: </label>';
-    var inputNumber='<input type="number" name="numberSong-'+nameDivDataInput+'" id ="numberSong-'+nameDivDataInput+'" style="width:100px;margin-right:10px" min=0 value=0>';
-    var buttonDelete='<br><button onclick="deleteDataField('+nameDivDataInput+');" id="buttonDelete-'+nameDivDataInput+'" value="">borra estos datos</button>';
+    var inputNumber='<input type="number" name="numberSong-'+nameDivDataInput+'" id ="numberSong-'+nameDivDataInput+'" style="width:100px;margin-left:23px" min=0 value=0>';
+    
     var finisDiv='</p>';
-    $('#divDataInput').append( initDiv+labelLang+inputLang+labelNumber+inputNumber+buttonDelete+finisDiv);
+    $('#divDataInput').append( initDiv+buttonDelete+labelLang+inputLang+labelNumber+inputNumber+finisDiv);
     $('#divButtonCalcDLEM').show();
 }
 function deleteDataField(nameField){
