add change text dlem

--- a/DLEM.html
+++ b/DLEM.html
@@ -135,14 +135,14 @@ function addDataField(){
         arrayDataInputs.push(nameDivDataInput);
     }
     var initDiv='<p id="dataInput-'+nameDivDataInput+'">';
-    var buttonDelete='<button onclick="deleteDataField('+nameDivDataInput+');" id="buttonDelete-'+nameDivDataInput+'" value="">borra estos datos</button>';
+    
     var labelLang='<br><label for="nameLang-'+nameDivDataInput+'">Introduce el nombre del lenguaje: </label>';
     var inputLang='<input type="text" name="nameLang-'+nameDivDataInput+'" id ="nameLang-'+nameDivDataInput+'" style="width:100px;margin-left:30px" value="">';
     var labelNumber='<br><label for="numberSong-'+nameDivDataInput+'">Introduce el número de canciones: </label>';
     var inputNumber='<input type="number" name="numberSong-'+nameDivDataInput+'" id ="numberSong-'+nameDivDataInput+'" style="width:100px;margin-left:23px" min=0 value=0>';
-    
+    var buttonDelete='<br><button onclick="deleteDataField('+nameDivDataInput+');" id="buttonDelete-'+nameDivDataInput+'" value="">borra estos datos</button><p><button onclick="addDataField();" value="">Añadir nuevo lenguaje</button></p>';
     var finisDiv='</p>';
-    $('#divDataInput').append( initDiv+buttonDelete+labelLang+inputLang+labelNumber+inputNumber+finisDiv);
+    $('#divDataInput').append( initDiv+labelLang+inputLang+labelNumber+inputNumber+buttonDelete+finisDiv);
     $('#divButtonCalcDLEM').show();
 }
 function deleteDataField(nameField){
